--- a/myssmproject-dev/myssmproject-dev/ssm/src/main/webapp/WEB-INF/web.xml
+++ b/myssmproject-dev/myssmproject-dev/ssm/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <!--1、启动Spring的容器  -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring-application.xml</param-value>
+        <param-value>classpath:spring/spring-application.xml</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -21,7 +21,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring-mvc.xml</param-value>
+            <param-value>classpath:spring/spring-mvc.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
